--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/kaushan-script": "^4.5.8",
+    "@fontsource/open-sans": "^4.5.10",
+    "@fontsource/sirin-stencil": "^4.5.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^6.3.3",
+    "gsap": "^3.10.4",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-locomotive-scroll": "^0.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
